2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	New test `silentyacc.test' (Automake silent-mode with Yacc).
	* tests/silentyacc.test: New test.
	* tests/Makefile.am (TESTS): Updated accordingly.

	New test `silentlex.test' (Automake silent-mode with Lex).
	* tests/silentlex.test: New test.
	* tests/Makefile.am (TESTS): Updated accordingly.

	Relax tests on silent-rules to cater to overly verbose makes.
	* tests/silent.test: When testing silent builds, don't fail if
	make's output simply contains the `mv' substring, but only if
	it contains the `mv ' substring (note the trailing space).
	* tests/silent2.test: Likewise.
	* tests/silent3.test: Likewise.
	* tests/silent4.test: Likewise.
	* tests/silent5.test: Likewise.
	* tests/silent9.test: Likewise.

2010-01-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix silent-rules output for disabled dependency tracking.
	* lib/am/depend2.am [!%FASTDEP%]: Rework silent-rules variable
	expansion code to also work in the case where %AMDEP% expands
	to FALSE at config.status time, using new substitution string
	%VERBOSE-NODEP%.
	* automake.in (verbose_nodep_flag): New function, appending
	`@am__nodep@' to the verbose-variable name.
	(handle_languages): If dependencies are not disabled, use it to
	set %VERBOSE-NODEP%.
	* m4/depend.m4: Substitute am__nodep as '_no', so the second
	verbose-variable will always expand to an empty string, if
	dependencies are enabled.
	* tests/silent5.test: Also test --disable-dependency-tracking;
	also test per-target flags for non-C language files.
	* tests/silent9.test: New test, like silent4.test but disable
	dependency tracking.
	* tests/Makefile.am: Adjust.
	* NEWS, THANKS: Update.
	Report by Dmitry V. Levin <ldv@altlinux.org>.

2010-05-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Extend test on `nostdinc' automake option.
	* tests/nostdinc.test: Enable `errexit' shell flag.  Related and
	unrelated minor changes.  Make the grepping of the generated